Fix alignment issues in trending
By making the the trending content a container and making a grid track of two columns. Also adds a bit of gap between elements for better legibility

--- a/styles.css
+++ b/styles.css
@@ -198,20 +198,25 @@ aside{
     padding: 10px;
 }
 
-.trending-avatar{
-    width: 4rem;
-    border-radius: 2rem;
-}
 #Announcments,#Trending{
     /* temp */
     border: 2px dotted black;
 }
 
 /* Trending */
+.Trending{
+    gap:1rem;
+}
 .trend{
     display: grid;
-    grid-template: 1fr auto/auto auto;
+    grid-template-columns: auto auto;
+    gap: 10px
 }
-.trending-title {
-    grid-area: 2/1/3/-1;
+.trending-avatar{
+    width: 4rem;
+    border-radius: 2rem;
+    align-self: center;
+}
+.trending-user, .trending-title{
+    margin:0;
 }
